# openPOST

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: collections.rs  environments.rs  history.rs  http.rs  mod.rs
src-tauri/src/models/: collection.rs  environment.rs  history.rs  mod.rs  request.rs  response.rs
src-tauri/src/persistence/: mod.rs  storage.rs
src/components/layout/: StatusBar.tsx  TitleBar.tsx
src/components/request/: BodyEditor.tsx  KeyValueEditor.tsx  RequestPanel.tsx  UrlBar.tsx
src/components/response/: ResponseBody.tsx  ResponseHeaders.tsx  ResponsePanel.tsx
src/components/shared/: EmptyState.tsx  ErrorBoundary.tsx  Tabs.tsx
src/components/sidebar/: CollectionsPanel.tsx  EnvironmentsPanel.tsx  HistoryPanel.tsx  Sidebar.tsx
src/lib/: env-substitution.test.ts  env-substitution.ts  tauri.ts  utils.test.ts  utils.ts
src/stores/: collections-store.ts  environments-store.ts  history-store.ts  request-store.ts  response-store.ts  ui-store.ts
src/types/: index.ts
